                justified vectors such that the vector length is not a
                multiple of the radix size (4 for hex, 3 for oct).
                Warray-bounds warning fix for 32-bit conversions in BitsToReal.
3.3.91  29may18 Added support for GSettings for when GConf is removed from 
                distributions such as Debian and Ubuntu.
                Performance fix for large number of groups (remove useless
                recursion required for transaction traces).
3.3.92  05jul18 Harden FST loader for missing .hier files (if applicable).
		GTK3 "How does the code know the size to allocate?" warning fix.
		Fix scrolling on help window by adding scroll to end mark.
                Fix scrolling on status	window when use_toolbutton_interface
                rc var is set to FALSE by adding scroll to end mark.
		GTK3: Fix status window so it does not grow in the y direction.
		Ifdef out code for --slider-zoom as it does not function with
		GTK toolkit versions > 1.x series.
		Ifdef out code for force_toolbars as it does not function with
		GTK toolkit versions > 2.x series.
		Removed and replaced all GTK3 deprecated API.
		Installed g_log_set_writer_func handler to suppress numerous
		GTK3 warnings.
		Updated BUILT_SOURCES for vermin.
		extern yy_size_t yyleng fix in rtlbrowse.
3.3.93	20jul18	Add missing XXX_gdk_pointer_ungrab() prototype for GTK3.
		Fix missing signal/wave window updates in Wayland.
		Fix mouseover initial position in Wayland.  Movement is
		not yet supported in Wayland for floating mouseover window.
		Crash fix for twinwave with Wayland (no GtkSocket/Plug).
		Added sst_dbl_action_type rc variable which controls side-
                effect of double-clicking in SST signals pane.
		Added preliminary support for swipe gestures in wave window
		(currently disabled by default with rc variable use_gestures).
		Added GtkGestureLongPress for baseline marker set/clear.