@@ -1679,3 +1679,4 @@
 		Added preliminary support for swipe gestures in wave window
 		(currently disabled by default with rc variable use_gestures).
 		Added GtkGestureLongPress for baseline marker set/clear.
+		Added GtkGesturePan to restore normal left cursor drag.
